--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.1.3",
+    "@types/node": "^6.0.73",
     "core-js": "^2.4.1",
+    "jwt-decode": "^2.2.0",
+    "ng2-bootstrap": "^1.3.3",
+    "ng2-file-upload": "^1.2.0",
     "rxjs": "^5.1.0",
+    "ts-helpers": "^1.1.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
