--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jwt-decode": "^2.2.0",
     "ng2-bootstrap": "^1.3.3",
     "ng2-file-upload": "^1.2.0",
+    "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.8.4"
