--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "jwt-decode": "^2.2.0",
     "ng2-bootstrap": "^1.3.3",
     "ng2-file-upload": "^1.2.0",
-    "ngx-bootstrap": "^1.6.6",
+    "ng2-tweet": "0.0.16",
     "ng2-youtube": "^1.1.4",
     "ng2-youtube-player": "0.0.3",
+    "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
     "typings": "^2.1.1",
