--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^6.0.73",
     "@types/youtube": "0.0.29",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "ng2-bootstrap": "^1.3.3",
     "ng2-file-upload": "^1.2.0",
