--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@angular/router": "^4.1.3",
     "@types/node": "^6.0.73",
     "@types/youtube": "0.0.29",
+    "angular2-tag-input": "^1.2.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "ng2-bootstrap": "^1.3.3",
     "ng2-file-upload": "^1.2.0",
+    "ng2-tag-input": "^1.3.0",
     "ng2-tweet": "0.0.16",
     "ng2-youtube": "^1.1.4",
     "ng2-youtube-player": "0.0.3",
