--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "ng2-bootstrap": "^1.3.3",
     "ng2-file-upload": "^1.2.0",
     "ng2-material-dropdown": "^0.7.7",
-    "ng2-tag-input": "^1.3.0",
-    "ng2-toasty": "^4.0.0",
+    "ng2-tag-input": "~1.2.9",
     "ng2-tweet": "0.0.16",
     "ng2-youtube": "^1.1.4",
     "ng2-youtube-player": "0.0.3",
