--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start": "node ./bin/www",
+    "start-dev": "nodemon ./bin/www",
+    "seed": "node ./bin/seed.js",
+    "postinstall": "ng build -prod"
   },
   "private": true,
   "dependencies": {
@@ -22,11 +25,25 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.1.3",
+    "@angular/cli": "1.0.3",
     "@types/node": "^6.0.73",
     "@types/youtube": "0.0.29",
+    "body-parser": "~1.17.1",
+    "compression": "^1.6.2",
+    "cookie-parser": "~1.4.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.3",
+    "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
+    "ejs": "~2.5.6",
+    "express": "~4.15.2",
     "hammerjs": "^2.0.8",
+    "https": "^1.0.0",
+    "jquery": "^3.2.1",
+    "jsonwebtoken": "^7.4.1",
     "jwt-decode": "^2.2.0",
+    "mongoose": "^4.10.1",
+    "morgan": "~1.8.1",
     "ng2-bootstrap": "^1.3.3",
     "ng2-file-upload": "^1.2.0",
     "ng2-material-dropdown": "^0.7.7",
@@ -35,8 +52,14 @@
     "ng2-youtube": "^1.1.4",
     "ng2-youtube-player": "0.0.3",
     "ngx-bootstrap": "^1.6.6",
+    "oauth": "^0.9.15",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "request": "^2.81.0",
     "rxjs": "^5.1.0",
+    "serve-favicon": "~2.4.2",
     "ts-helpers": "^1.1.1",
+    "twitter-node-client": "0.0.6",
     "typings": "^2.1.1",
     "zone.js": "^0.8.4"
   },
