--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "ts-helpers": "^1.1.1",
     "twitter-node-client": "0.0.6",
     "typings": "^2.1.1",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "@angular/cli": "1.0.3",
+    "@angular/compiler-cli": "^4.0.0"
   },
   "devDependencies": {
     "@angular/cli": "1.0.3",
